# course_materials

./: .gitignore  README.md  build.py  deploy.sh  index.html  preprocessor.py  remark.html  requirements.txt  site_config.py  style.css  syllabus.md  trevor.html  week_1.md  week_2.md  week_3.md  week_4.md  week_5.md  week_6.md  week_7.md  week_8.md  week_9.md  yourname.html
.github/workflows/: build-and-deploy.yml  python-app.yml
assignments/: README.md
assignments/exercise_1/: README.md  resume.html
assignments/exercise_2/: README.md  index.html
assignments/exercise_3/: README.md  create_post.py  (+4 more)
examples/week_9/passwords_with_tests/: __init__.py  app.py  requirements.txt  secrets.cfg  setup.cfg
examples/week_9/passwords_with_tests/migrations/: 20200304T184500-create_database.sql  20200304T184700-create_tables.sql
examples/week_9/passwords_with_tests/passwords/: __init__.py  db.py
examples/week_9/passwords_with_tests/passwords/migrations/: 20200304T184700-create_tables.sql
examples/week_9/passwords_with_tests/passwords/static/: index.html  script.js
examples/week_9/passwords_with_tests/static/: index.html  style.css
examples/week_9/passwords_with_tests/tests/: test_admin.py  test_app.py
final_project/: README.md  requirements.txt
lecture_notes/: index.html  week_1.md  week_2.md  week_3.md  week_4.md  week_5.md  week_6.md  week_7.md  week_8.md  week_8_old.md  week_9.md
templates/: base.html  examples_index.html  index.html  lecture_index.html  page.html  slide.html
tests/: test_build.py  test_preprocessor.py
uchicagowebdev.com/: index.html
(+142 files in other folders)
