[metadata]
name = passwords
version = 0.0.1
maintainer_email = trevoraustin@cs.uchicago.edu
description = A simple passwords app to demonstrate bcrypt

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    passwords
